# MultiAgent-Research-System

./: README.md  main.py  pyproject.toml  requirements.txt
Database/: claim_db_schema.py  contradictions_schema.py  migrations.py  research_sessions_schema.py  research_system.db  tasks_schema.py  verification_table_schema.py
tools/: db_helpers.py  input_validator.py
