[project]
name = "multiagent-research-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "filelock>=3.29.0",
    "google-generativeai>=0.8.6",
    "groq>=1.2.0",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "langdetect>=1.0.9",
    "loguru>=0.7.3",
    "lxml>=6.1.1",
    "newspaper3k>=0.2.8",
    "praw>=7.8.1",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "semanticscholar>=0.12.0",
    "tavily-python>=0.7.24",
    "tenacity>=9.1.4",
    "waybackpy>=3.0.6",
    "wikipedia-api>=0.14.1",
]
